--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,16 @@
-certifi==2024.12.14
-charset-normalizer==3.4.1
+aiohappyeyeballs==2.4.4
+aiohttp==3.11.11
+aiosignal==1.3.2
+attrs==24.3.0
+frozenlist==1.5.0
 gitdb==4.0.12
 GitPython==3.1.44
 idna==3.10
 iniconfig==2.0.0
+multidict==6.1.0
 packaging==24.2
 pluggy==1.5.0
+propcache==0.2.1
 pytest==8.3.4
-requests==2.32.3
 smmap==5.0.2
-urllib3==2.3.0
+yarl==1.18.3
